--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fahad Faisal Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <section class="top-banner">
+    <div class="title-container half-width">
+      <h1>Welcome To</h1>
+      <h1><span class="orange-color">Fahad Faisal</span> World</h1>
+      <h3>Front End Developer</h3>
+      <p>Hello I am Fahad Faisal.I am a enthuastic learner and very much passionate about web development.My goal is to make great and usefull web applications.</p>
+      <a href="#" target="_blank" class="link-button">HIRE ME</a> 
+    </div>
+    <div class="img-container half-width">
+      <img src="images/img-header.png" alt="profile image">
+    </div>
+  </section> 
 </body>
 </html>
