--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
       <img src="images/img-header.png" alt="profile image">
     </div>
   </section> 
+  <section class="dream-big">
+    <div class="half-width">
+      <img src="images/img-2.png" alt="">
+    </div>
+    <div class="half-width">
+      <h1>Dream Big</h1>
+      <h2>Become a Web Developer</h2>
+      <p>I already learned the basic HTML and CSS. I can build any simple website.Currently working on interesting projects to get a hand on advanced topics</p>
+      <a href="#" target="_blank" class="link-button">DOWNLOAD RESUME</a>
+    </div>
+  </section>
 </body>
 </html>
