--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="top-banner">
+  <section class="top-banner flex-container">
     <div class="title-container half-width">
       <h1>Welcome To</h1>
       <h1><span class="orange-color">Fahad Faisal</span> World</h1>
@@ -23,7 +23,7 @@
       <img src="images/img-header.png" alt="profile image">
     </div>
   </section> 
-  <section class="dream-big">
+  <section class="dream-big flex-container">
     <div class="half-width">
       <img src="images/img-2.png" alt="">
     </div>
@@ -34,5 +34,20 @@
       <a href="#" target="_blank" class="link-button">DOWNLOAD RESUME</a>
     </div>
   </section>
+  <section class="experience-area">
+    <h1>Experiences</h1>
+    <div class="flex-container">
+      <div class="experience-item">
+        <h2>Front End Developer</h2>
+        <h3 class="orange-color">2022-present</h3>
+        <p>I worked with some intermediate CSS and still working on some advanced topics.I learned a little Javascript and exploring how to make a application dynamic.</p>
+      </div>
+      <div class="experience-item">
+        <h2>Front End Development Student</h2>
+        <h3 class="orange-color">Dec-2021 to 2021</h3>
+        <p>I have worked with beginner level HTML and CSS and made some good looking projects during this time.I have learned a little bit about designs like color-schemes, typography, choosing right elements for right web persona etc</p>
+      </div>
+    </div>
+   </section>
 </body>
 </html>
