--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
   <section class="experience-area">
     <h1>Experiences</h1>
     <div class="flex-container">
-      <div class="experience-item">
+      <div class="experience-item" id="web-dev-experience">
         <h2>Front End Developer</h2>
         <h3 class="orange-color">2022-present</h3>
         <p>I worked with some intermediate CSS and still working on some advanced topics.I learned a little Javascript and exploring how to make a application dynamic.</p>
       </div>
-      <div class="experience-item">
+      <div class="experience-item" id="web-dev-student">
         <h2>Front End Development Student</h2>
         <h3 class="orange-color">Dec-2021 to 2021</h3>
         <p>I have worked with beginner level HTML and CSS and made some good looking projects during this time.I have learned a little bit about designs like color-schemes, typography, choosing right elements for right web persona etc</p>
       </div>
     </div>
    </section>
+   <footer>© Fahad Faisal, first portfolio site.</footer>
 </body>
 </html>
