--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
       </div>
     </div>
    </section>
-   <footer>© Fahad Faisal, first portfolio site.</footer>
+   <footer>© Fahad Faisal 2022, first portfolio site.</footer>
 </body>
 </html>
